--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "element-plus": "^2.10.4",
+    "flowbite": "^3.1.2",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
